FEAT-3363:"Make it easier to add account at any level in hierarchy" Task FEAT-3638:"Implement RendererAccountTypeSubMenu() for choosing account type to add"
1. Add ability to configure sub-menus in MT Context Menu;
2. Configure child account sub-menu items;
3. Add missing localization for some Account Type display names.

Code Reviewer: MSukhovarov

--- a/App_GlobalResources/KeyTerms.de.resx
+++ b/App_GlobalResources/KeyTerms.de.resx
@@ -258,4 +258,13 @@
     <data name="TEXT_KEYTERM_USAGE_CHARGES_AGGREGATE" xml:space="preserve">
         <value>Nutzungsgebühren (aufaddiert)</value>
     </data>
+	<data name="TEXT_KEYTERM_CORE_SUBSCRIBER" xml:space="preserve">
+		<value>[DE] Core Subscriber</value>
+	</data>
+	<data name="TEXT_KEYTERM_DEPARTMENT_ACCOUNT" xml:space="preserve">
+		<value>[DE] Department Account</value>
+	</data>
+	<data name="TEXT_KEYTERM_GSM_SERVICE_ACCOUNT" xml:space="preserve">
+		<value>[DE] GSM Service Account</value>
+	</data>
 </root>
