--- a/App_GlobalResources/KeyTerms.en-GB.resx
+++ b/App_GlobalResources/KeyTerms.en-GB.resx
@@ -258,4 +258,13 @@
     <data name="TEXT_KEYTERM_USAGE_CHARGES_AGGREGATE" xml:space="preserve">
         <value>Usage Charge (Aggregate)</value>
     </data>
+	<data name="TEXT_KEYTERM_CORE_SUBSCRIBER" xml:space="preserve">
+		<value>[EN-GB] Core Subscriber</value>
+	</data>
+	<data name="TEXT_KEYTERM_DEPARTMENT_ACCOUNT" xml:space="preserve">
+		<value>[EN-GB] Department Account</value>
+	</data>
+	<data name="TEXT_KEYTERM_GSM_SERVICE_ACCOUNT" xml:space="preserve">
+		<value>[EN-GB] GSM Service Account</value>
+	</data>
 </root>
