--- a/App_GlobalResources/KeyTerms.es-MX.resx
+++ b/App_GlobalResources/KeyTerms.es-MX.resx
@@ -258,4 +258,13 @@
     <data name="TEXT_KEYTERM_USAGE_CHARGES_AGGREGATE" xml:space="preserve">
         <value>Cargos por uso (Total)</value>
     </data>
+	<data name="TEXT_KEYTERM_CORE_SUBSCRIBER" xml:space="preserve">
+		<value>[ES-MX] Core Subscriber</value>
+	</data>
+	<data name="TEXT_KEYTERM_DEPARTMENT_ACCOUNT" xml:space="preserve">
+		<value>[ES-MX] Department Account</value>
+	</data>
+	<data name="TEXT_KEYTERM_GSM_SERVICE_ACCOUNT" xml:space="preserve">
+		<value>[ES-MX] GSM Service Account</value>
+	</data>
 </root>
