CDE Usage/Decision Audit.

--- a/App_GlobalResources/MainMenu.en-GB.resx
+++ b/App_GlobalResources/MainMenu.en-GB.resx
@@ -549,6 +549,9 @@
     <data name="TEXT_UPDATE_EXISTING_REPORT_DEFINITIONS" xml:space="preserve">
         <value>Update Daily Report Schedule</value>
     </data>
+    <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
+        <value>Usage Audit</value>
+    </data>
     <data name="TEXT_USM" xml:space="preserve">
         <value>Usage Report</value>
     </data>
