--- a/App_GlobalResources/MainMenu.ja.resx
+++ b/App_GlobalResources/MainMenu.ja.resx
@@ -549,6 +549,9 @@
     <data name="TEXT_UPDATE_EXISTING_REPORT_DEFINITIONS" xml:space="preserve">
         <value>既存の報告書定義の更新</value>
     </data>
+    <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
+        <value>Usage Audit</value>
+    </data>
     <data name="TEXT_USM" xml:space="preserve">
         <value>利用サーバーのメンテナンス</value>
     </data>
