--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.en-GB.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.en-GB.resx
@@ -162,4 +162,7 @@
   <data name="TEXT_STATUS" xml:space="preserve">
     <value>Status</value>
   </data>
+  <data name="TEXT_STATUS_INFORMATION" xml:space="preserve">
+    <value>Status Information</value>
+  </data>
 </root>
