--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -1224,4 +1224,10 @@
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(German) Middle initial is invalid</value>
   </data>                
+  <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
+    <value>(German) Retry</value>
+  </data>    
+  <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
+    <value>{German} Resubmitted Request</value>
+  </data>                   
  </root>
