--- a/App_GlobalResources/JSConsts.en-GB.resx
+++ b/App_GlobalResources/JSConsts.en-GB.resx
@@ -1155,4 +1155,10 @@
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>Middle initial is invalid</value>
   </data>       
+  <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
+    <value>Retry</value>
+  </data>    
+  <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
+    <value>Resubmitted Request</value>
+  </data>                 
 </root>
