--- a/App_GlobalResources/JSConsts.es-MX.resx
+++ b/App_GlobalResources/JSConsts.es-MX.resx
@@ -1218,4 +1218,10 @@
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(MEXICAN SPANISH) Middle initial is invalid</value>
   </data>    
+  <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
+    <value>(MEXICAN SPANISH) Retry</value>
+  </data>    
+  <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
+    <value>{MEXICAN SPANISH} Resubmitted Request</value>
+  </data>             
 </root>
