--- a/App_GlobalResources/JSConsts.it.resx
+++ b/App_GlobalResources/JSConsts.it.resx
@@ -1230,4 +1230,10 @@
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) Middle initial is invalid</value>
   </data>     
+  <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
+    <value>(ITALIAN) Retry</value>
+  </data>    
+  <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
+    <value>{ITALIAN} Resubmitted Request</value>
+  </data>         
 </root>
