--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -1218,4 +1218,10 @@
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(BRAZILIAN PORTUGUESE) Middle initial is invalid</value>
   </data>     
+  <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
+    <value>(BRAZILIAN PORTUGUESE) Retry</value>
+  </data>   
+  <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
+    <value>(BRAZILIAN PORTUGUESE) Resubmitted Request</value>
+  </data>     
 </root>
