--- a/Sites/MetraView/App_GlobalResources/Resource.de.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.de.resx
@@ -246,6 +246,9 @@
     <data name="TEXT_DOWNLOAD_INVOICES" xml:space="preserve">
         <value>Rechnungen und Berichte herunterladen</value>
     </data>
+	<data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
+        <value>(German) Download Credit Notes</value>
+    </data>	
     <data name="TEXT_EDIT" xml:space="preserve">
         <value>Bearbeiten</value>
     </data>
