--- a/Sites/MetraView/App_GlobalResources/Resource.en-GB.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.en-GB.resx
@@ -258,6 +258,9 @@
     <data name="TEXT_DOWNLOAD_INVOICES" xml:space="preserve">
         <value>Download Invoices and Reports</value>
     </data>
+	<data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
+        <value>Download Credit Notes</value>
+    </data>	
     <data name="TEXT_EDIT" xml:space="preserve">
         <value>Edit </value>
     </data>
