--- a/Sites/MetraView/App_GlobalResources/Resource.es-MX.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.es-MX.resx
@@ -249,6 +249,9 @@
 	<data name="TEXT_DOWNLOAD_QUOTES" xml:space="preserve">
         <value>Descargar comillas</value>
     </data>
+	<data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
+        <value>(Mexican Spanish) Download Credit Notes</value>
+    </data>	
     <data name="TEXT_EDIT" xml:space="preserve">
         <value>Editar </value>
     </data>
