--- a/Sites/MetraView/App_GlobalResources/Resource.fr.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.fr.resx
@@ -249,6 +249,9 @@
 	<data name="TEXT_DOWNLOAD_QUOTES" xml:space="preserve">
         <value>Télécharger quotes</value>
     </data>
+	<data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
+        <value>(French) Download Credit Notes</value>
+    </data>	
     <data name="TEXT_EDIT" xml:space="preserve">
         <value>Modifier</value>
     </data>
