--- a/Sites/MetraView/App_GlobalResources/Resource.it.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.it.resx
@@ -249,6 +249,9 @@
 	<data name="TEXT_DOWNLOAD_QUOTES" xml:space="preserve">
         <value>Scarica citazioni</value>
     </data>
+	<data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
+        <value>(Italian) Download Credit Notes</value>
+    </data>	
     <data name="TEXT_EDIT" xml:space="preserve">
         <value>Modifica</value>
     </data>
