--- a/Sites/MetraView/App_GlobalResources/Resource.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.resx
@@ -249,7 +249,10 @@
 	<data name="TEXT_DOWNLOAD_QUOTES" xml:space="preserve">
         <value>Download Quotes</value>
     </data>
-    <data name="TEXT_EDIT" xml:space="preserve">
+	<data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
+        <value>Download Credit Notes</value>
+    </data>
+	<data name="TEXT_EDIT" xml:space="preserve">
         <value>Edit </value>
     </data>
     <data name="TEXT_EN_US" xml:space="preserve">
