FEAT-3098 Ability For System To Deliver/Display Credit Note Document To Subscriber In MetraView

--- a/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.en-GB.resx
+++ b/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.en-GB.resx
@@ -132,4 +132,16 @@
   <data name="SelectInterval.Text" xml:space="preserve">
     <value>Select Interval</value>
   </data>
+   <data name="AddReport.Text" xml:space="preserve">
+    <value>Add report {0} to InvioceList</value>
+  </data>
+  <data name="AddCreditNoteReport.Text" xml:space="preserve">
+    <value>Add report {0} to CreditNotesList</value>
+  </data>
+  <data name="ErrorDownload.Text" xml:space="preserve">
+    <value>Unable to download reports</value>
+  </data>
+  <data name="NoCreditNotes.Text" xml:space="preserve">
+    <value>No Credit Notes Found</value>
+  </data>  
 </root>
