--- a/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.es-MX.resx
+++ b/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.es-MX.resx
@@ -126,4 +126,16 @@
   <data name="SelectInterval.Text" xml:space="preserve">
     <value>Seleccionar intervalo</value>
   </data>
+    <data name="AddReport.Text" xml:space="preserve">
+    <value>(Mexican Spanish) Add report {0} to InvioceList</value>
+  </data>
+  <data name="AddCreditNoteReport.Text" xml:space="preserve">
+    <value>(Mexican Spanish) Add report {0} to CreditNotesList</value>
+  </data>
+  <data name="ErrorDownload.Text" xml:space="preserve">
+    <value>(Mexican Spanish) Unable to download reports</value>
+  </data>
+  <data name="NoCreditNotes.Text" xml:space="preserve">
+    <value>(Mexican Spanish) No Credit Notes Found</value>
+  </data> 
 </root>
