--- a/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.ja.resx
+++ b/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.ja.resx
@@ -126,4 +126,16 @@
   <data name="SelectInterval.Text" xml:space="preserve">
     <value>期間の選択</value>
   </data>
+    <data name="AddReport.Text" xml:space="preserve">
+    <value>(Japanese) Add report {0} to InvioceList</value>
+  </data>
+  <data name="AddCreditNoteReport.Text" xml:space="preserve">
+    <value>(Japanese) Add report {0} to CreditNotesList</value>
+  </data>
+  <data name="ErrorDownload.Text" xml:space="preserve">
+    <value>(Japanese) Unable to download reports</value>
+  </data>
+  <data name="NoCreditNotes.Text" xml:space="preserve">
+    <value>(Japanese) No Credit Notes Found</value>
+  </data> 
 </root>
