--- a/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.da.resx
+++ b/Sites/MetraView/Reports/App_LocalResources/DownloadInvoices.aspx.da.resx
@@ -132,4 +132,17 @@
     <data name="SelectInterval.Text" xml:space="preserve">
         <value></value>
     </data>
+  </data>
+   <data name="AddReport.Text" xml:space="preserve">
+    <value>(DA) Add report {0} to InvioceList</value>
+  </data>
+  <data name="AddCreditNoteReport.Text" xml:space="preserve">
+    <value>(DA) Add report {0} to CreditNotesList</value>
+  </data>
+  <data name="ErrorDownload.Text" xml:space="preserve">
+    <value>(DA) Unable to download reports</value>
+  </data>
+  <data name="NoCreditNotes.Text" xml:space="preserve">
+    <value>(DA) No Credit Notes Found</value>
+  </data>	
 </root>
