--- a/App_GlobalResources/Resource.pt-br.resx
+++ b/App_GlobalResources/Resource.pt-br.resx
@@ -534,4 +534,16 @@
   <data name="updateSubscription" xml:space="preserve">
     <value>[PT-BR]Subscription Update</value>
   </data>
+  <data name="TEXT_QUOTE_DETAILS" xml:space="preserve">
+    <value>More Items...</value>
+  </data>
+  <data name="ACCOUNT_FOR_QUOTES" xml:space="preserve">
+    <value>More Items...</value>
+  </data>
+  <data name="PO_FOR_QUOTES" xml:space="preserve">
+    <value>More Items...</value>
+  </data>
+  <data name="LOG_FOR_QUOTES" xml:space="preserve">
+    <value>Quote log</value>
+  </data>
 </root>
