--- a/App_GlobalResources/Resource.resx
+++ b/App_GlobalResources/Resource.resx
@@ -313,7 +313,19 @@
     <value>Manage Group Subscriptions</value>
   </data>
   <data name="TEXT_MORE_ITEMS" xml:space="preserve">
-    <value>More Items...B2693</value>
+    <value>More Items...</value>
+  </data>
+  <data name="TEXT_QUOTE_DETAILS" xml:space="preserve">
+    <value>Quote details</value>
+  </data>
+  <data name="ACCOUNT_FOR_QUOTES" xml:space="preserve">
+    <value>Accounts</value>
+  </data>
+  <data name="PO_FOR_QUOTES" xml:space="preserve">
+    <value>Product offerings</value>
+  </data>
+  <data name="LOG_FOR_QUOTES" xml:space="preserve">
+    <value>Quote log</value>
   </data>
   <data name="TEXT_NAME" xml:space="preserve">
     <value>Name</value>
